# Polynomial

./: CMakeLists.txt  LICENSE  README.md
Polynomial/: polynomial.cpp  polynomial.h
